# clusters_unmixing

./: .gitignore  NEW_COMPUTER_SETUP.md  README.md  REFACTOR_NOTES.md  VALIDATION.md  main.py  pyproject.toml
data/: 6clusters_digitized.csv  6clusters_thomas.csv
experiments/configs/: configuration.yaml  correlation_options.yaml
experiments/configs/experiments/outputs/cluster_corr_options/: correlation_summary.csv
notebooks/: 00_cluster_diagnostics.ipynb  00_clusters_unmixing_experiments.ipynb  _notebook_smoke.py
src/clusters_unmixing/: core_math.py  dataio.py  metrics.py
src/clusters_unmixing/config/: __init__.py  schema.py
src/clusters_unmixing/data/: __init__.py  synthetic.py
src/clusters_unmixing/dataio/: __init__.py  clusters.py
src/clusters_unmixing/diagnostics/: __init__.py  diagnostics.py  diagnostics_app.py  plots.py
src/clusters_unmixing/experiments/: run_correlation_options.py
src/clusters_unmixing/metrics/: __init__.py
src/clusters_unmixing/models/: __init__.py  runner_registry.py  small_mlp.py  sunsal.py  vpgdu.py
src/clusters_unmixing/pipelines/: __init__.py  correlation_pipeline.py  experiment_pipeline.py
src/clusters_unmixing/transforms/: __init__.py  normalization.py  spectral_views.py
src/clusters_unmixing/utils/: __init__.py  diagnostics.py  notebook_diagnostics.py  run_helpers.py
tests/: test_bands_ranges_reduction.py  test_diagnostics_snr_filtering.py  test_run_correlation_experiments.py  test_smoke.py  test_transform_steps.py
(+3 files in other folders)
